# proyecto-integrador-data-engineering

./: .gitignore  DOCUMENTACION.md  Dockerfile  LICENSE  Makefile  README.md  RUNBOOK.md  docker-compose.yml  ejecutar_pipeline.py  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
airflow/dags/: ventas_pipeline_dag.py
config/: pipeline.yml
data/: ventas.csv
dbt/ventas/: dbt_project.yml  profiles.yml
dbt/ventas/models/marts/: fct_ingresos.sql  schema.yml
dbt/ventas/models/staging/: schema.yml  stg_ventas.sql
dbt/ventas/tests/: assert_grilla_unica.sql
dbt/ventas/tests/generic/: positivo.sql
docs/evidence/: 05_output_preview.md  run_summary.json
jobs/: __init__.py  carga.py  common.py  comunes.py  ingest.py  ingesta.py  job_spark.py  load.py  metricas.py  metrics.py  spark_job.py  transform.py  transformacion.py  validacion.py  validate.py
observability/grafana/dashboards/: pipeline_dashboard.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
output/: ingresos_por_producto_fecha.csv  ingresos_por_producto_fecha.parquet
output/metrics/: ventas_pipeline.prom
scripts/: generar_datos.py  generar_evidencia.py  generate_data.py  make_evidence.py
tests/: conftest.py  test_ingest.py  test_ingesta.py  test_pipeline_e2e.py  test_transform.py  test_transformacion.py  test_validacion.py  test_validate.py
