[project]
name = "proyecto-integrador-dataeng"
version = "1.0.0"
description = "Pipeline de datos end-to-end de ventas (Proyecto Integrador Data Engineering)"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
